test/good/nullables/op06.px

func f(Int? x) Int? def
    print x
    return x

Int x = f(null) ?? f(0) ?? f(null)!
print x

print (f(5) ?? f(3)!) + 1
